# virtual-contributor-ingest-website

./: .gitignore  Dockerfile  README.md  ai_models.py  config.py  docker-compose.yaml  graph.py  local_types.py  main.py  pyproject.toml  url_utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md  user_story.md
.github/workflows/: build-deploy-k8s-dev-hetzner.yml  build-deploy-k8s-sandbox-hetzner.yml  build-deploy-k8s-test-hetzner.yml  build-release-docker-hub.yml
manifests/: 25-virtual-contributor-ingest-website-deployment-dev.yml
