[tool.poetry]
name = "virtual-contributor-ingest-website"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
bs4 = "^0.0.2"
pandas = "^2.3.3"
langgraph = "^0.6.8"
azure-ai-inference = "^1.0.0b9"
langchain = "^0.3.27"
load-dotenv = "^0.1.0"
bcrypt = "^5.0.0"
langchain-openai = "^0.3.34"
openai = "^2.1.0"
asyncio = "^4.0.0"
alkemio-virtual-contributor-engine = {path = "../alkemio-virtual-contributor-engine"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
