[tool.poetry]
name = "virtual-contributor-ingest-website"
version = "0.4.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
bs4 = "^0.0.2"
pandas = "^2.3.3"
langgraph = "^1.0.4"
azure-ai-inference = "^1.0.0b9"
load-dotenv = "^0.1.0"
bcrypt = "^5.0.0"
alkemio-virtual-contributor-engine = {git = "https://git@github.com/alkem-io/virtual-contributor-engine.git", rev = "v0.5.0"}
langchain = "^1.1.2"
langchain-text-splitters = "^0.3.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
